added some images as notes

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Js</title>
+	<link rel="icon" type="image/png" href="http://needscollective.com/testing/beta/images/favicon/favicon.ico"/>
 </head>
 <body>
 <!-- <script src="dynamicVsLexicalScope/dynamicVsLexicalScope.js"></script> -->
 <!-- <script src="call-apply-bind/call.js"></script> -->
-<!-- <script src="oop/oop.js"></script> -->
+<script src="oop/oop.js"></script>
 <!-- <script src="functionalProgramming/exAmazon.js"></script> -->
 </body>
 </html>
